hippy/parser.py
import sys
from hippy.rply import ParserGenerator
from hippy.lexer import RULES
from hippy.lexer import PRECEDENCES
from hippy.lexer import Lexer
from pypy.tool.pairtype import extendabletype


class Node(object):
    __metaclass__ = extendabletype

    lineno = 0
    _attrs_ = ()

    # those classes are extended with compile() methods in compiler.py

    def __eq__(self, other):
        return (self.__class__ == other.__class__ and
                self.__dict__ == other.__dict__)

    def __ne__(self, other):
        return not self == other

    def __repr__(self):
        return self.repr()

    def is_constant(self):
        return False

    def repr(self):
        raise NotImplementedError("abstract base class")

    def compile(self, ctx):
        raise NotImplementedError("abstract base class")


class Block(Node):
    def __init__(self, stmts):
        self.stmts = stmts

    def repr(self):
        return "Block(" + ", ".join([i.repr() for i in self.stmts]) + ")"


class Stmt(Node):
    def __init__(self, expr, lineno=0):
        self.expr = expr
        self.lineno = lineno

    def repr(self):
        return "Stmt(%s)" % self.expr.repr()


class Assignment(Node):
    """ Simple assignment to statically named variable
    """
    def __init__(self, var, expr):
        self.var = var
        self.expr = expr

    def repr(self):
        return "Assign(%s, %s)" % (self.var.repr(), self.expr.repr())


class InplaceOp(Node):
    def __init__(self, op, var, expr):
        self.op = op
        self.var = var
        self.expr = expr

    def repr(self):
        return "InplaceOp(%s, %s, %s)" % (self.op, self.var.repr(),
                                          self.expr.repr())


class Const(Node):
    def is_constant(self):
        return True


class ConstantInt(Const):
    def __init__(self, intval):
        self.intval = intval

    def repr(self):
        return str(self.intval)


class ConstantStr(Const):
    def __init__(self, strval):
        self.strval = strval

    def repr(self):
        return '"' + self.strval + '"'


class ConstantFloat(Const):
    def __init__(self, floatval):
        self.floatval = floatval

    def repr(self):
        return str(self.floatval)


class ConstantAppend(Const):

    def repr(self):
        return 'fake_index'


class BinOp(Node):
    def __init__(self, op, left, right):
        self.op = op
        self.left = left
        self.right = right

    def repr(self):
        return "%s %s %s" % (self.left.repr(), self.op, self.right.repr())


class PrefixOp(Node):
    def __init__(self, op, val):
        self.op = op
        self.val = val

    def repr(self):
        return "%s%s" % (self.op, self.val.repr())


class SuffixOp(Node):
    def __init__(self, op, val):
        self.op = op
        self.val = val

    def repr(self):
        return "%s%s" % (self.val.repr(), self.op)


class Variable(Node):
    def __init__(self, node):
        self.node = node

    def repr(self):
        return "$" + self.node.repr()


class UninitializedVariable(Node):
    def __init__(self, name):
        self.name = name

    def repr(self):
        return "$" + self.name


class InitializedVariable(Node):
    def __init__(self, name, expr):
        self.name = name
        self.expr = expr

    def repr(self):
        return "$" + self.name + " = " + self.expr.repr()


class Echo(Node):
    def __init__(self, exprlist, lineno=0):
        self.exprlist = exprlist
        self.lineno = lineno

    def repr(self):
        return "Echo(%s)" % ", ".join([i.repr() for i in self.exprlist])


class Return(Stmt):
    def repr(self):
        if self.expr is None:
            return "return;"
        return "return " + self.expr.repr() + ";"


class While(Node):
    def __init__(self, expr, body, lineno=0):
        self.expr = expr
        self.body = body
        self.lineno = lineno

    def repr(self):
        return "While(%s, %s)" % (self.expr.repr(), self.body.repr())


class DoWhile(Node):
    def __init__(self, body, expr, lineno=0):
        self.expr = expr
        self.body = body
        self.lineno = lineno

    def repr(self):
        return "DoWhile(%s, %s)" % (self.body.repr(), self.expr.repr())


class For(Node):
    def __init__(self, start, cond, step, body, lineno=0):
        self.start = start
        self.cond = cond
        self.step = step
        self.body = body
        self.lineno = lineno

    def repr(self):
        return "For(%s, %s, %s, %s)" % (self.start.repr(), self.cond.repr(),
                                        self.step.repr(), self.body.repr())


class If(Node):
    def __init__(self, cond, body, elseiflist=None, elseclause=None,
                 lineno=0):
        self.cond = cond
        self.body = body
        self.elseiflist = elseiflist
        self.elseclause = elseclause
        self.lineno = lineno

    def repr(self):
        if self.elseiflist is not None:
            elseif = ", [" + ", ".join(
                [i.repr() for i in self.elseiflist]) + "]"
        else:
            elseif = ""
        if self.elseclause is not None:
            elseclause = ", " + self.elseclause.repr()
        else:
            elseclause = ""
        return "If(%s, %s%s%s)" % (self.cond.repr(), self.body.repr(),
                                       elseif, elseclause)


class SimpleCall(Node):
    def __init__(self, name, args):
        self.name = name
        self.args = args

    def repr(self):
        argrepr = ", ".join([i.repr() for i in self.args])
        return "SimpleCall(%s, %s)" % (self.name, argrepr)


class DynamicCall(Node):
    def __init__(self, node, args):
        self.node = node
        self.args = args

    def repr(self):
        argrepr = ", ".join([i.repr() for i in self.args])
        return "DynamicCall(%s, %s)" % (self.node.repr(), argrepr)


class FunctionDecl(Node):
    def __init__(self, name, argdecls, body, lineno):
        self.name = name
        self.argdecls = argdecls
        self.body = body
        self.lineno = lineno

    def repr(self):
        argsrepr = "[" + ", ".join([i.repr() for i in self.argdecls]) + "]"
        return "FunctionDecl(%s, %s, %s)" % (self.name, argsrepr,
                                             self.body.repr())


class Argument(Node):
    def __init__(self, name):
        self.name = name

    def repr(self):
        return self.name


class ReferenceArgument(Node):
    def __init__(self, name):
        self.name = name

    def repr(self):
        return "&" + self.name


class DefaultArgument(Node):
    def __init__(self, name, value):
        self.name = name
        self.value = value

    def repr(self):
        return "%s = %s" % (self.name, self.value.repr())


class GetItem(Node):
    def __init__(self, node, item):
        self.node = node
        self.item = item

    def repr(self):
        return 'GetItem(%s, %s)' % (self.node.repr(), self.item.repr())


class GetItemReference(GetItem):
    pass


class SetItem(Node):
    def __init__(self, node, item, value):
        self.node = node
        self.item = item
        self.value = value

    def repr(self):
        return 'SetItem(%s, %s, %s)' % (self.node.repr(), self.item.repr(),
                                        self.value.repr())


class InplaceSetItem(Node):
    def __init__(self, op, node, item, value):
        self.op = op
        self.node = node
        self.item = item
        self.value = value

    def repr(self):
        return 'InplaceSetItem(%s, %s, %s, %s)' % (self.op, self.node.repr(),
                                                   self.item.repr(),
                                                   self.value.repr())


class Array(Node):
    def __init__(self, initializers):
        self.initializers = initializers

    def repr(self):
        return 'Array([%s])' % ', '.join([i.repr() for i in self.initializers])


class Hash(Node):
    def __init__(self, initializers):
        self.initializers = initializers

    def repr(self):
        return 'Hash([%s])' % ', '.join([
                "(%s => %s)" %
                (k.repr(), v.repr()) for k, v in self.initializers])


class Append(Node):
    def __init__(self, node, expr):
        self.node = node
        self.expr = expr

    def repr(self):
        return 'Append(%s, %s)' % (self.node.repr(), self.expr.repr())


class And(Node):
    def __init__(self, left, right):
        self.left = left
        self.right = right

    def repr(self):
        return 'And(%s, %s)' % (self.left.repr(), self.right.repr())


class Or(Node):
    def __init__(self, left, right):
        self.left = left
        self.right = right

    def repr(self):
        return 'Or(%s, %s)' % (self.left.repr(), self.right.repr())


class Global(Node):
    def __init__(self, names, lineno=0):
        self.names = names
        self.lineno = lineno

    def repr(self):
        return 'Global(%s)' % ', '.join(self.names)


class StaticDecl(Node):
    def __init__(self, vars, lineno=0):
        self.vars = vars
        self.lineno = lineno

    def repr(self):
        return 'StaticDecl([%s])' % ', '.join([v.repr() for v in self.vars])


class NamedConstant(Node):
    def __init__(self, name):
        self.name = name

    def is_constant(self):
        # only prebuilt ones
        if self.name.lower() in ['true', 'false', 'null']:
            return True
        return False

    def repr(self):
        return 'NamedConstant(%s)' % self.name


class Reference(Node):
    def __init__(self, item):
        self.item = item

    def repr(self):
        return 'Reference(%s)' % self.item.repr()


class Break(Node):
    def __init__(self, lineno=0):
        self.lineno = lineno

    def repr(self):
        return "Break"


class Continue(Node):
    def __init__(self, lineno=0):
        self.lineno = lineno

    def repr(self):
        return "Continue"


class IfExpr(Node):
    def __init__(self, cond, left, right):
        self.cond = cond
        self.left = left
        self.right = right

    def repr(self):
        return "IfExpr(%s, %s, %s)" % (self.cond.repr(), self.left.repr(),
                                       self.right.repr())


class ForEach(Node):
    def __init__(self, expr, varname, body, lineno=0):
        self.expr = expr
        self.varname = varname
        self.body = body
        self.lineno = lineno

    def repr(self):
        return 'ForEach(%s, %s, %s)' % (self.expr.repr(), self.varname.repr(),
                                        self.body.repr())


class ForEachKey(Node):
    def __init__(self, expr, keyname, valname, body, lineno=0):
        self.expr = expr
        self.keyname = keyname
        self.valname = valname
        self.body = body
        self.lineno = lineno

    def repr(self):
        return 'ForEachKey(%s, %s, %s, %s)' % (self.expr.repr(),
                                               self.keyname.repr(),
                                               self.valname.repr(),
                                               self.body.repr())


class Cast(Node):
    def __init__(self, to, expr):
        self.to = to
        self.expr = expr

    def repr(self):
        return 'Cast(%s, %s)' % (self.to, self.expr.repr())


class LexerWrapper(object):
    def __init__(self, lexer):
        self.lexer = lexer

    def next(self):
        try:
            return self.lexer.next()
        except StopIteration:
            return None


class Parser(object):

    def __init__(self, lexer):
        self.lexer = lexer

    def parse(self):
        l = LexerWrapper(self.lexer)
        return self.parser.parse(l, state=self)

    pg = ParserGenerator([d for (r, d) in RULES],
                         precedence=PRECEDENCES,
                         cache_id="hippy")

    @pg.production("main : top_statement_list")
    def main_top_statement_list(self, p):
        # XXX : remove print!!
        print p[0]
        return Block(p[0])

    @pg.production("top_statement_list : top_statement_list top_statement")
    def top_statement_list_top_statement(self, p):
        if isinstance(p[0], list):
            if p[1]:
                p[0].append(p[1])
                return p[0]
            return p[0]
        return [p[0], p[1]]

    @pg.production("top_statement_list : top_statement")
    def top_statatement_list(self, p):
        return [p[0]]

    @pg.production("top_statement : statement")
    def top_statement(self, p):
        return p[0]

    @pg.production("top_statement : function_declaration_statement")
    def top_statement_function_declaration_statement(self, p):
        raise NotImplementedError(p)

    @pg.production("top_statement : class_declaration_statement")
    def top_statement_class_declaration_statement(self, p):
        raise NotImplementedError(p)

    @pg.production("top_statement : T_HALT_COMPILER ( ) ;")
    def top_statement_t_halt_compiler(self, p):
        raise NotImplementedError(p)

    @pg.production("top_statement : T_NAMESPACE namespace_name ;")
    def top_statement_t_namespace_namespace_name(self, p):
        raise NotImplementedError(p)

    @pg.production("top_statement : T_NAMESPACE namespace_name "
                   "{ top_statement_list }")
    def top_statement_t_namespace_namespace_name_top_stmt_list(self, p):
        raise NotImplementedError(p)

    @pg.production("top_statement : T_USE use_declarations ;")
    def top_statement_t_use_use_declarations(self, p):
        raise NotImplementedError(p)

    @pg.production("top_statement : constant_declaration ;")
    def top_statement_constant_declaration(self, p):
        raise NotImplementedError(p)

    @pg.production("constant_declaration : constant_declaration"
                   " , T_STRING = static_scalar")
    def constant_declaration_constant_decl_scalar(self, p):
        raise NotImplementedError(p)

    @pg.production("constant_declaration : T_CONST"
                   " T_STRING = static_scalar")
    def constant_declaration_t_const_scalar(self, p):
        raise NotImplementedError(p)

    @pg.production("use_declarations : use_declarations , use_declaration")
    def use_declarations_use_declarations_use_declaration(self, p):
        raise NotImplementedError(p)

    @pg.production("use_declarations : use_declaration")
    def use_declarations_use_declaration(self, p):
        raise NotImplementedError(p)

    @pg.production("function_declaration_statement : "
                   "unticked_function_declaration_statement")
    def function_declaration_statement_unticked_f_decl_stmt(self, p):
        raise NotImplementedError(p)

    @pg.production("unticked_function_declaration_statement : "
               "function is_reference T_STRING ( parameter_list ) "
                " { inner_statement_list }")
    def unticked_func_decl_stmt_f_is_ref_param_list_inner_stmt_lst(self, p):
        raise NotImplementedError(p)

    @pg.production("inner_statement_list : "
                   "inner_statement_list inner_statement")
    def inner_statement_list_inner_statement_list_inner_statement(self, p):
        if isinstance(p[0], list):
            if p[1]:
                if p[0] is None:
                    return p[1]
                p[0].append(p[1])
                return p[0]
            return p[0]
        if p[0] is None:
            return p[1]
        return [p[0], p[1]]

    @pg.production("function : T_FUNCTION")
    def function_t_function(self, p):
        raise NotImplementedError(p)

    @pg.production("class_declaration_statement : "
                   "unticked_class_declaration_statement")
    def class_declaration_statement_unticked_class_decl_stmt(self, p):
        raise NotImplementedError(p)

    @pg.production("inner_statement : statement")
    def inner_statement_statement(self, p):
        return p[0]

    @pg.production("inner_statement : function_declaration_statement")
    def inner_statement_function_declaration_statement(self, p):
        raise NotImplementedError(p)

    @pg.production("inner_statement : class_declaration_statement")
    def inner_statement_class_declaration_statement(self, p):
        raise NotImplementedError(p)

    @pg.production("inner_statement : T_HALT_COMPILER ( ) ;")
    def inner_statement_halt(self, p):
        raise NotImplementedError(p)

    @pg.production("is_reference : &")
    def is_reference_reference(self, p):
        raise NotImplementedError(p)

    @pg.production("is_reference : empty")
    def is_reference_empty(self, p):
        raise NotImplementedError(p)

    @pg.production("unticked_class_declaration_statement : "
                   "class_entry_type T_STRING extends_from implements_list "
                   "{ class_statement_list }")
    def unticked_class_declaration_statemet_class_entry_type(self, p):
        raise NotImplementedError(p)

    @pg.production("unticked_class_declaration_statement : "
                   "interface_entry T_STRING interface_extends_list "
                   "{ class_statement_list }")
    def unticked_class_declaration_statemet_interface_entry(self, p):
        raise NotImplementedError(p)

    @pg.production("class_entry_type : T_CLASS")
    def class_entry_type_t_class(self, p):
        raise NotImplementedError(p)

    @pg.production("class_entry_type : T_ABSTRACT T_CLASS")
    def class_entry_type_t_abstract_t_class(self, p):
        raise NotImplementedError(p)

    @pg.production("class_entry_type : T_FINAL T_CLASS")
    def class_entry_type_t_final_t_class(self, p):
        raise NotImplementedError(p)

    @pg.production("extends_from : T_EXTENDS fully_qualified_class_name")
    def extends_from_t_extends_fully_qual_class_name(self, p):
        raise NotImplementedError(p)

    @pg.production("class_statement_list : "
                   "class_statement_list class_statement")
    def class_statement_list_class_statement_list_class_statement(self, p):
        raise NotImplementedError(p)

    @pg.production("class_statement_list : empty")
    def class_statement_list_empty(self, p):
        raise NotImplementedError(p)

    @pg.production("class_statement : variable_modifiers "
                   "class_variable_declaration ;")
    def class_statement_variable_modifiers_class_var_declaration(self, p):
        raise NotImplementedError(p)

    @pg.production("class_statement : class_constant_declaration ;")
    def class_statement_class_const_declaration(self, p):
        raise NotImplementedError(p)

    @pg.production("class_statement : method_modifiers function"
                   " is_reference T_STRING ( "
                   "parameter_list ) method_body")
    def class_statement_method_modifiers_function(self, p):
        raise NotImplementedError(p)

    @pg.production("fully_qualified_class_name : namespace_name")
    def fqcn_namespace_name(self, p):
        raise NotImplementedError(p)

    @pg.production("fully_qualified_class_name : "
                   "T_NAMESPACE T_NS_SEPARATOR namespace_name")
    def fqcn_t_namespace_t_ns_sep_namespace_name(self, p):
        raise NotImplementedError(p)

    @pg.production("fully_qualified_class_name : "
                   "T_NS_SEPARATOR namespace_name")
    def fqcn_t_ns_sep_namespace_name(self, p):
        raise NotImplementedError(p)

    @pg.production("implements_list : T_IMPLEMENTS interface_list")
    def implements_list_t_implements_interface_list(self, p):
        raise NotImplementedError(p)

    @pg.production("implements_list : empty")
    def implements_list_empty(self, p):
        raise NotImplementedError(p)

    @pg.production("interface_list : interface_list"
                   " , fully_qualified_class_name")
    def interface_list_interface_list_fqcn(self, p):
        raise NotImplementedError(p)

    @pg.production("interface_list : fully_qualified_class_name")
    def interface_list_fqcn(self, p):
        raise NotImplementedError(p)

    @pg.production("class_constant_declaration : "
                   "class_constant_declaration , "
                   "T_STRING = static_scalar")
    def class_constant_decl_class_constant_decl_t_string(self, p):
        raise NotImplementedError(p)

    @pg.production("class_constant_declaration : "
                   "T_CONST T_STRING = static_scalar")
    def class_constant_decl_class_constant_decl_t_const_t_string(self, p):
        raise NotImplementedError(p)

    @pg.production("method_body : ;")
    def method_body_end_stmt(self, p):
        raise NotImplementedError(p)

    @pg.production("method_body : { inner_statement_list }")
    def method_body_inner_stmt_list(self, p):
        raise NotImplementedError(p)

    @pg.production("variable_modifiers : non_empty_member_modifiers")
    def variable_modifiers_non_empty_member_modifiers(self, p):
        raise NotImplementedError(p)

    @pg.production("variable_modifiers : T_VAR")
    def variable_modifiers_t_var(self, p):
        raise NotImplementedError(p)

    @pg.production("non_empty_member_modifiers : "
                   "non_empty_member_modifiers member_modifier")
    def non_empty_member_modifiers_non_empty_member_modifiers(self, p):
        raise NotImplementedError(p)

    @pg.production("member_modifier : T_PUBLIC")
    @pg.production("member_modifier : T_PROTECTED")
    @pg.production("member_modifier : T_PRIVATE")
    @pg.production("member_modifier : T_STATIC")
    @pg.production("member_modifier : T_ABSTRACT")
    @pg.production("member_modifier : T_FINAL")
    def member_modifier(self, p):
        raise NotImplementedError(p)

    @pg.production("non_empty_member_modifiers : "
                   "member_modifier")
    def non_empty_member_modifiers_member_modifier(self, p):
        raise NotImplementedError(p)

    @pg.production("interface_extends_list : T_EXTENDS interface_list")
    def interface_extends_list_t_extends(self, p):
        raise NotImplementedError(p)

    @pg.production("interface_extends_list : empty")
    def interface_extends_list_empty(self, p):
        raise NotImplementedError(p)

    @pg.production("method_modifiers : non_empty_member_modifiers")
    def method_modifiers_non_empty_member_modifiers(self, p):
        raise NotImplementedError(p)

    @pg.production("method_modifiers : empty")
    def method_modifiers_empty(self, p):
        raise NotImplementedError(p)

    @pg.production("non_empty_member_modifiers : "
                   "non_empty_member_modifiers member_modifier")
    def ne_member_modifiers_ne_member_modifiers_member_modifier(self, p):
        raise NotImplementedError(p)

    @pg.production("non_empty_member_modifiers : "
                   "member_modifier")
    def ne_member_modifiers_member_modifier(self, p):
        raise NotImplementedError(p)

    @pg.production("optional_class_type : fully_qualified_class_name")
    def optional_class_type_fqcn(self, p):
        raise NotImplementedError(p)

    @pg.production("optional_class_type : T_ARRAY")
    def optional_class_type_t_array(self, p):
        raise NotImplementedError(p)

    @pg.production("optional_class_type : empty")
    def optional_class_type_empty(self, p):
        raise NotImplementedError(p)

    @pg.production("class_variable_declaration : "
                   "class_variable_declaration , T_VARIABLE")
    def class_vdecl_class_vdecl_t_var(self, p):
        raise NotImplementedError(p)

    @pg.production("class_variable_declaration : "
                   "class_variable_declaration , "
                   "T_VARIABLE = static_scalar")
    def class_vdecl_class_vdecl_t_var_static_scalar(self, p):
        raise NotImplementedError(p)

    @pg.production("class_variable_declaration : T_VARIABLE")
    def class_vdecl_t_var(self, p):
        raise NotImplementedError(p)

    @pg.production("class_variable_declaration : "
                   "T_VARIABLE = static_scalar")
    def class_vdecl_t_var_static_scalar(self, p):
        raise NotImplementedError(p)

    @pg.production("interface_entry : T_INTERFACE")
    def interface_entry_t_interface(self, p):
        raise NotImplementedError(p)

    @pg.production("parameter_list : non_empty_parameter_list")
    def parameter_list_non_empty_parameter_list(self, p):
        raise NotImplementedError(p)

    @pg.production("parameter_list : empty")
    def parameter_list_empty(self, p):
        raise NotImplementedError(p)

    @pg.production("non_empty_parameter_list : "
                   "optional_class_type T_VARIABLE")
    def nepl_optional_class_type_t_var(self, p):
        raise NotImplementedError(p)

    @pg.production("non_empty_parameter_list : "
                   "non_empty_parameter_list , optional_class_type T_VARIABLE")
    def nepl_nepl_optional_class_type_t_var(self, p):
        raise NotImplementedError(p)

    @pg.production("non_empty_parameter_list : "
                   "optional_class_type & T_VARIABLE")
    def nepl_optional_class_type_h_ref_t_var(self, p):
        raise NotImplementedError(p)

    @pg.production("non_empty_parameter_list : "
                   "non_empty_parameter_list , "
                   "optional_class_type & T_VARIABLE")
    def nepl_nepl_optional_class_type_h_ref_t_var(self, p):
        raise NotImplementedError(p)

    @pg.production("non_empty_parameter_list : "
                   "optional_class_type T_VARIABLE = static_scalar")
    def nepl_optional_class_type_t_var_static_scalar(self, p):
        raise NotImplementedError(p)

    @pg.production("non_empty_parameter_list : "
                   "non_empty_parameter_list , optional_class_type"
                   " T_VARIABLE = static_scalar")
    def nepl_nepl_optional_class_type_t_var_static_scalar(self, p):
        raise NotImplementedError(p)

    @pg.production("non_empty_parameter_list : "
                   "optional_class_type "
                   "& T_VARIABLE = static_scalar")
    def nepl_optional_class_type_h_ref_t_var_static_scalar(self, p):
        raise NotImplementedError(p)

    @pg.production("inner_statement_list : empty")
    def inner_statement_list_empty(self, p):
        return p[0]

    @pg.production("use_declaration : namespace_name")
    def use_declaration_namespace_name(self, p):
        raise NotImplementedError(p)

    @pg.production("use_declaration : namespace_name T_AS T_STRING")
    def use_declaration_namespace_name_as_string(self, p):
        raise NotImplementedError(p)

    @pg.production("use_declaration : T_NS_SEPARATOR namespace_name")
    def use_declaration_t_ns_namespace_namespace_name(self, p):
        raise NotImplementedError(p)

    @pg.production("use_declaration : T_NS_SEPARATOR "
                   "namespace_name T_AS T_STRING")
    def use_declaration_t_ns_namespace_namespace_name_as_string(self, p):
        raise NotImplementedError(p)

    @pg.production("statement : unticked_statement")
    def statement(self, p):
        return p[0]

    @pg.production("unticked_statement : expr ;")
    def unticked_statement_expr(self, p):
        return Stmt(p[0])

    @pg.production("unticked_statement : { inner_statement_list }")
    def unticked_statement_inner_statement_list(self, p):
        return Block(p[1])

    @pg.production("unticked_statement : T_IF ( expr ) "
                   "statement elseif_list else_single")
    def unticked_statement_if_statement_elseif_else_single(self, p):
        return If(p[2], p[4])

    @pg.production("unticked_statement : T_IF ( expr ) : "
                   "inner_statement_list new_elseif_list "
                   "new_else_single T_ENDIF ;")
    def unticked_statement_if_inner_statement_elseif_else_single(self, p):
        raise NotImplementedError(p)

    @pg.production("unticked_statement : T_WHILE "
                   "( expr ) while_statement")
    def unticked_statement_t_while(self, p):
        raise NotImplementedError(p)

    @pg.production("unticked_statement : T_DO statement "
                   "T_WHILE ( expr ) ;")
    def unticked_statement_t_do(self, p):
        raise NotImplementedError(p)

    @pg.production("unticked_statement : T_FOR "
                   "( for_expr ; "
                   "for_expr ; for_expr ) for_statement")
    def unticked_statement_t_for(self, p):
        raise NotImplementedError(p)

    @pg.production("unticked_statement : "
                   "T_SWITCH ( expr ) switch_case_list")
    def unticked_statement_t_switch(self, p):
        raise NotImplementedError(p)

    @pg.production("unticked_statement : T_BREAK ;")
    def unticked_statement_t_break(self, p):
        raise NotImplementedError(p)

    @pg.production("unticked_statement : T_BREAK expr ;")
    def unticked_statement_t_break_expr(self, p):
        raise NotImplementedError(p)

    @pg.production("unticked_statement : T_CONTINUE ;")
    def unticked_statement_t_continue(self, p):
        raise NotImplementedError(p)

    @pg.production("unticked_statement : T_CONTINUE expr ;")
    def unticked_statement_t_continue_expr(self, p):
        raise NotImplementedError(p)

    @pg.production("unticked_statement : T_RETURN ;")
    def unticked_statement_t_return(self, p):
        raise NotImplementedError(p)

    @pg.production("unticked_statement : T_RETURN "
                   "expr_without_variable ;")
    def unticked_statement_t_return_expr_wo_variable(self, p):
        raise NotImplementedError(p)

    @pg.production("unticked_statement : T_RETURN variable ;")
    def unticked_statement_t_return_variable(self, p):
        raise NotImplementedError(p)

    @pg.production("unticked_statement : T_GLOBAL global_var_list ;")
    def unticked_statement_t_global_global_var_list(self, p):
        raise NotImplementedError(p)

    @pg.production("unticked_statement : T_STATIC static_var_list ;")
    def unticked_statement_t_static_static_var_list(self, p):
        raise NotImplementedError(p)

    @pg.production("unticked_statement : T_ECHO echo_expr_list ;")
    def unticked_statement_t_echo_expr_list(self, p):
        raise NotImplementedError(p)

    #@pg.production("unticked_statement : T_INLINE_HTML")

    @pg.production("unticked_statement : T_UNSET "
                   "( unset_variables ) ;")
    def unticked_statement_t_unset_variables(self, p):
        raise NotImplementedError(p)

    @pg.production("unticked_statement : T_FOREACH "
                   "( variable T_AS foreach_variable "
                   "foreach_optional_arg ) foreach_statement")
    def unticked_statement_t_for_each_variable(self, p):
        raise NotImplementedError(p)

    @pg.production("unticked_statement : T_FOREACH "
                   "( expr_without_variable T_AS "
                   "variable foreach_optional_arg ) foreach_statement")
    def unticked_statement_t_for_each_expr_wo_variable(self, p):
        raise NotImplementedError(p)

    @pg.production("unticked_statement : T_DECLARE "
                   "( declare_list ) declare_statement")
    def unticked_statement_t_declare_declare_list(self, p):
        raise NotImplementedError(p)

    @pg.production("unticked_statement : ;")
    def unticked_statement_empty_statement(self, p):
        return None

    @pg.production("unticked_statement : T_TRY "
                   "{ inner_statement_list } "
                   "T_CATCH ( fully_qualified_class_name "
                   "T_VARIABLE ) { "
                   "inner_statement_list } additional_catches")
    def unticked_statement_t_try(self, p):
        raise NotImplementedError(p)

    @pg.production("unticked_statement : T_THROW expr ;")
    def unticked_statement_t_throw_expr(self, p):
        raise NotImplementedError(p)

    @pg.production("unticked_statement : T_GOTO T_STRING ;")
    def unticked_statement_t_goto_string(self, p):
        raise NotImplementedError(p)

    @pg.production("expr : r_variable")
    def expr_expr_r_variable(self, p):
        return p[0]

    @pg.production("expr : expr_without_variable")
    def expr_expr_without_variable(self, p):
        return p[0]

    @pg.production("expr_without_variable : scalar")
    def expr_expr_without_variable_scalar(self, p):
        return p[0]

    @pg.production("expr_without_variable : T_ARRAY ( "
                   "array_pair_list )")
    def expr_expr_without_variable_array(self, p):
        raise NotImplementedError(p)

    @pg.production("expr_without_variable : variable = expr")
    def expr_without_variable_variable_eq_expr(self, p):
        return Assignment(p[0], p[2])

    @pg.production("expr_without_variable : variable "
                   "= & variable")
    def expr_without_variable_variable_eq_ref_var(self, p):
        raise NotImplementedError(p)

    @pg.production("expr_without_variable : variable "
                   "= & T_NEW "
                   "class_name_reference ctor_arguments")
    def expr_without_variable_variable_eq_var_t_new_class(self, p):
        raise NotImplementedError(p)

    @pg.production("expr_without_variable : T_NEW "
                   "class_name_reference ctor_arguments")
    def expr_without_variable_variable_t_new_class(self, p):
        raise NotImplementedError(p)

    @pg.production("expr_without_variable : T_CLONE expr")
    def expr_without_variable_variable_t_clone(self, p):
        raise NotImplementedError(p)
